# paper-dots-v2

./: README.md
backend/: logging_setup.py  pyproject.toml
backend/browser-extension/: content.js  manifest.json  popup.html  popup.js
backend/dashboard/: app.py
backend/data/input/: arxiv_urls.txt
backend/data/output/: datasets.json
backend/notebooks/: dataset_extraction_using_genai.ipynb  gliner.ipynb  read_text.ipynb  search_dataset.ipynb
backend/scripts/: extract_datasets.py  utils.py
