[project]
name = "backend"
version = "0.1.0"
description = "An end-to-end research paper management system for students"
authors = [
    { name = "Harshit Sharma", email = "harshit158@gmail.com" }
]
dependencies = [
    "pymupdf>=1.25.1",
    "ipykernel>=6.29.5",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/backend"]
